force-app/main/default/objects/Signed_Documents__c/Signed_Documents__c.object-meta.xml
<CustomObject>
    <description>Signed documents received via eMail to be verified</description>
    <label>Signed Document</label>
    <nameField>
        <displayFormat>SD-{000000}</displayFormat>
        <label>Signed Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signed Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>