force-app/main/default/objects/Signed_Documents__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>From address in email</description>
    <inlineHelpText>From address in email</inlineHelpText>
    <label>Sender</label>
    <type>Email</type>
</CustomField>