force-app/main/default/objects/Signed_Documents__c/fields/Inbox__c.field-meta.xml
<CustomField>
    <fullName>Inbox__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Inbox document</description>
    <inlineHelpText>Related Inbox document</inlineHelpText>
    <label>Inbox</label>
    <referenceTo>Inbox__c</referenceTo>
    <relationshipLabel>Signed Documents</relationshipLabel>
    <relationshipName>Signed_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>