force-app/main/default/objects/Signed_Documents__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Remarks from eMail</description>
    <inlineHelpText>Remarks from eMail</inlineHelpText>
    <label>Remarks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>